@@ -369,7 +369,7 @@
     
     # Compil Blocknotify
     cd ~
-    hide_output git clone https://github.com/tpruvot/yiimp
+    hide_output git clone https://github.com/bedri/yiimp
     cd $HOME/yiimp/blocknotify
     sudo sed -i 's/tu8tu5/'$blckntifypass'/' blocknotify.cpp
     hide_output sudo make
@@ -1030,7 +1030,7 @@
     define('"'"'YAAMP_CREATE_NEW_COINS'"'"', false);
     define('"'"'YAAMP_NOTIFY_NEW_COINS'"'"', false);
     
-    define('"'"'YAAMP_DEFAULT_ALGO'"'"', '"'"'x11'"'"');
+    define('"'"'YAAMP_DEFAULT_ALGO'"'"', '"'"'x11k'"'"');
     
     define('"'"'YAAMP_USE_NGINX'"'"', true);
     
@@ -1074,11 +1074,13 @@
     // Sample custom stratum ports
     $configCustomPorts = array(
     //	'"'"'x11'"'"' => 7000,
+    //	'"'"'x11k'"'"' => 5000,
     );
     
     // mBTC Coefs per algo (default is 1.0)
     $configAlgoNormCoef = array(
     //	'"'"'x11'"'"' => 5.0,
+    //	'"'"'x11k'"'"' => 3.0,
     );
     ' | sudo -E tee /var/web/serverconfig.php >/dev/null 2>&1
 
